working Thai scale

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
-    <title>Online Tuner</title>
+    <title>Thai Scale Tuner</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
         <span>Hz</span>
       </div>
     </div>
-    <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
+    <div class="a4">ด<sub>5</sub> = <span>230.3</span> Hz</div>
     <label class="auto">
       Auto
       <input type="checkbox" checked />
