included libraries for offline use

--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,8 @@
       Auto
       <input type="checkbox" checked />
     </label>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
+    <script src="sweetalert2@9.js"></script>
+    <script src="aubiojs@0.1.1.min.js"></script>
     <script src="tuner.js"></script>
     <script src="meter.js"></script>
     <!-- <script src="frequency-bars.js"></script> -->
