turn animation on/off

--- a/app/index.html
+++ b/app/index.html
@@ -27,10 +27,10 @@
     ด<sub>5</sub> = <span>230.3</span> Hz
   </div>
 
-  <label class="auto">
-    Auto
-    <input type="checkbox" checked />
-  </label>
+  <div class="checkboxes">
+    <label class="auto">Auto<input type="checkbox" checked /></label>
+    <label>Animate<input type="checkbox" id="animate-checkbox" /></label>
+  </div>
 
   <div class="mics">
     <label for="microphone-select">MIC</label>
