keep mic settings & small refactor

--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,10 @@
   </div>
 
   <div class="checkboxes">
-    <label class="auto">Auto<input type="checkbox" checked /></label>
-    <label>Animate<input type="checkbox" id="animate-checkbox" /></label>
+    <label for="auto-checkbox">Auto</label>
+    <input type="checkbox" id="auto-checkbox" checked />
+    <label for="animate-checkbox">Animate</label>
+    <input type="checkbox" id="animate-checkbox" />
   </div>
 
   <div class="mics">
