added monitor mode

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,11 @@
     </select>
     <button id="microphone-refresh">Refresh</button>
   </div>
+
+  <div class="monitor">
+    <label for="monitor-checkbox">Monitor</label>
+    <input type="checkbox" id="monitor-checkbox" />
+  </div>
 </body>
 
 <script src="sweetalert2@9.js"></script>
